--- a/views/about.hbs
+++ b/views/about.hbs
@@ -6,7 +6,7 @@
     <div>
         {{> header }}
         <p>
-            hello this is the about page
+            hello this website is created by MEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE
         </p>
     </div>
     {{> footer }}
