--- a/views/home.hbs
+++ b/views/home.hbs
@@ -8,6 +8,7 @@
         <p>
             {{ screemIt welcomeMessage }}
             <h4>Tashi Tobgay dakpa gonna fail!!!</h4>
+            <h4>Bijuita is also gonna fail!!!!</h4>
         </p>
     </div>
     {{> footer }}
