--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,8 +7,9 @@
         {{> header }}
         <p>
             {{ screemIt welcomeMessage }}
-            <h4>Tashi Tobgay dakpa gonna fail!!!</h4>
-            <h4>Bijuita is also gonna fail!!!!</h4>
+            <h4>Hello EGG how have you been?</h4>
+            <h4>When is your midterm exam?</h4>
+            
         </p>
     </div>
     {{> footer }}
